[gd_scene load_steps=3 format=3 uid="uid://5aty3rf7mea7"]

[ext_resource type="Script" uid="uid://b4owbk4k8xqyn" path="res://Scripts/UI/Inventory/InventorySlot.gd" id="1_31ikd"]
[ext_resource type="Shape2D" uid="uid://pfv27vwf8krr" path="res://Resources/Inventory/new_rectangle_shape_2d.tres" id="2_6ir82"]

[node name="Inventory Slot" type="Control" node_paths=PackedStringArray("area")]
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 64.0
mouse_filter = 2
script = ExtResource("1_31ikd")
area = NodePath("Area 2D")
collision_block = ExtResource("2_6ir82")

[node name="Area 2D" type="Area2D" parent="."]
position = Vector2(32, 32)
collision_layer = 32
collision_mask = 64

[connection signal="area_entered" from="Area 2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area 2D" to="." method="_on_area_2d_area_exited"]
[connection signal="mouse_entered" from="Area 2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area 2D" to="." method="_on_area_2d_mouse_exited"]
